# independency

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml  setup.cfg
.github/workflows/: linters-and-tests.yml  release.yml
.venv2/: pyvenv.cfg
di/: container.py
independency/: __init__.py  _common.py  async_container.py  common.py  container.py
tests/: conftest.py  test_async_container.py  test_container.py  test_containers_parametrized.py
