[tool.poetry]
name = "independency"
version = "1.2"
description = "Dependency injection container"
readme = "README.md"
repository = "https://github.com/Apollon76/di"
authors = ["apollon <Apollon76@yandex.ru>", "ashibaev <ashibaev98@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.960"
flake8-awesome = "^1.3.0"
pytest = "^7.1.2"
pylint = "^2.13.9"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py38', 'py39']
line-length = 120

