[project]
name = "independency"
version = "1.3"
description = "Dependency injection container"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "apollon", email = "Apollon76@yandex.ru"},
    {name = "ashibaev", email = "ashibaev98@yandex.ru"}
]

[project.urls]
Repository = "https://github.com/Apollon76/independency"

[project.optional-dependencies]
dev = [
    "black>=22.3.0",
    "mypy>=0.960",
    "flake8-awesome>=1.3.0",
    "pytest>=7.1.2",
    "pylint>=2.13.9",
    "pytest-cov>=3.0.0",
    "setuptools",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
target-version = ['py310', 'py311', 'py312']
line-length = 120

