[tool.poetry]
name = "independency"
version = "1.4"
description = "Dependency injection container"
readme = "README.md"
repository = "https://github.com/Apollon76/independency"
authors = ["apollon <Apollon76@yandex.ru>", "ashibaev <ashibaev98@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
mypy = "^1.13.0"
flake8-awesome = "^1.3.0"
pytest = "^8.0.0"
pylint = "^3.3.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310', 'py311', 'py312', 'py313']
line-length = 120

